# olive-monitoring

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Claude.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  DESIGN_AUDIT_REPORT.md  NORMALIZATION_SUMMARY.md  PHASE2_SETUP.md  QUICKSTART.md  README.md  Ruzzi.kml  SESSION-2025-11-05.md  SESSION-2025-11-06.md  SESSION-2025-11-07.md  SESSION-2025-11-17.md  SESSION-2025-11-25.md  SESSION-2026-01-15.md  SESSION-2026-06-17.md  TILE_SELECTION_FIX.md  docker-compose.yml  run_processing.sh
backend/: pyproject.toml  requirements-api.txt  requirements-test.txt  requirements.txt
backend/app/: alerts.py  analyse_history.py  baseline.py  config.py  database.py  image_processor.py  main.py  models.py  satellite_fetcher.py  vegetation_indices.py
backend/config/: field_zones.json  ridgedale_zone.json
backend/scripts/: add_ridgedale_zone.py  check_band_values.py  compare_historical.py  debug_processing.py  find_oldest_image.py  init_db.sql  load_field_zones.py  load_ridgedale_zone.py  migrate_add_arvi_osavi.sql  migrate_add_garden_zone.sql  migrate_add_ruzzi_zones.sql  migrate_add_users.sql  migrate_remove_garden_zone.sql  parse_kml_zones.py  process_satellite_data.py  reprocess_date.py  reprocess_from_date.py  reprocess_images.py  reprocess_with_cloud_mask.py  reprocess_year.py  test_copernicus_access.py  test_osavi_calculation.py  test_osavi_detailed.py  test_osavi_simple.py  test_tile_selection.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_satellite_fetcher.py  test_vegetation_indices.py
(+62 files in other folders)
